
Gregarius 0.3.1

 (12.01.2005) Fix: made feed archives work when  MOD_REWRITE is off
 
 (11.01.2005) Archives: fixed the buggy bit below, I hope :)
 
 (06.01.2005) Archives: navigate to the previous/successive item when
 	      looking at archives (buggy)
	      
	      Skip to content link (display:none) for text-only browsers
	      
	      Enabled <ol> as allowed tags in the config

 (02.01.2005) General: Jump to the newly collapsed (or expanded) feed after
 	      collapsing (or expanding)

 (30.12.2004) General: access a given feed's archives by clicking their month
 	      or day in channel view (preliminary work)

 (29.12.2004) Search: new order-by feature allows to return the results ordered
     	      by date,feed or feed,date

 (29.12.2004) Search: minor layout changes
 
 (20.12.2004) New permalink scheme: an item can now be accessed with an url
 	      in the form /feed_name/year/month/day/title
	      
 (20.12.2004) Get all items for a given feed for given date (month, day)
 	      with /feed_name/year/month/ or /feed_name/year/month/day/
	      respectively. This scheme should replace the ugly "&all"
	      scheme returning a huge load of items.
	      
 (15.12.2004) For those feeds that do not export pubplication dates for the
 	      items a "fetched date" is printed out instead.