@@ -2,6 +2,7 @@
 Gregarius 0.3.1
 
  (12.01.2005) Fix: made feed archives work when  MOD_REWRITE is off
+ 	      OPML import: make all items as read after an import
  
  (11.01.2005) Archives: fixed the buggy bit below, I hope :)
  
